better but still bad

--- a/index.html
+++ b/index.html
@@ -110,9 +110,6 @@
           <div class="cert-frame">
             <div class="cert-inner-frame">
               <div class="cert-content">
-                <!-- Watermark logo -->
-                <img src="logo.png" alt="" class="cert-watermark">
-
                 <h1 class="cert-title">Certificate of <span id="prevOccasion">Completion</span></h1>
 
                 <div class="cert-divider"></div>
@@ -127,10 +124,10 @@
                 <!-- Bottom: signature left, seal center, date right -->
                 <div class="cert-bottom">
                   <div class="cert-signature-area">
-                    <p id="prevSigCursive" class="cert-sig-cursive">Signatory</p>
+                    <p id="prevSigCursive" class="cert-sig-cursive">Signature</p>
                     <img id="prevSigImage" class="cert-sig-image hidden" alt="Signature">
                     <div class="cert-sig-line"></div>
-                    <p class="cert-signatory" id="prevSignedBy">Signatory</p>
+                    <p class="cert-signatory">Signature</p>
                     <p class="cert-sig-title" id="prevSigTitle"></p>
                   </div>
 
