--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 </head>
 <body>
 
+  <!-- Mobile menu button -->
+  <button class="mobile-menu-btn" id="mobileMenuBtn" title="Edit certificate">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
+      <line x1="4" y1="6" x2="20" y2="6"/>
+      <line x1="4" y1="12" x2="20" y2="12"/>
+      <line x1="4" y1="18" x2="20" y2="18"/>
+    </svg>
+  </button>
+
+  <!-- Backdrop for mobile sidebar -->
+  <div class="sidebar-backdrop" id="sidebarBackdrop"></div>
+
   <main class="app-main">
     <!-- Left Sidebar -->
     <aside class="sidebar" id="sidebar">
@@ -96,7 +108,15 @@
     <section class="preview-panel">
       <div class="preview-header">
         <h2>Live Preview</h2>
-        <button id="exportBtn" class="export-btn">Export PDF</button>
+        <div class="preview-actions">
+          <button class="info-btn" id="infoBtn" title="About">
+            <svg width="18" height="18" viewBox="0 0 16 16" fill="none">
+              <circle cx="8" cy="8" r="7" stroke="currentColor" stroke-width="1.5"/>
+              <text x="8" y="12" text-anchor="middle" font-size="10" font-weight="700" fill="currentColor" font-family="serif">i</text>
+            </svg>
+          </button>
+          <button id="exportBtn" class="export-btn">Export PDF</button>
+        </div>
       </div>
       <div class="preview-wrapper" id="previewWrapper">
         <div id="certificate" class="certificate">
@@ -150,6 +170,40 @@
       </div>
     </section>
   </main>
+
+  <!-- Info modal -->
+  <div class="modal-overlay hidden" id="infoModal">
+    <div class="modal">
+      <h3 class="modal-title">About</h3>
+      <div class="info-grid">
+        <p><strong>Author</strong>Brian Cheng</p>
+        <p><strong>Version</strong>1.1</p>
+        <p><strong>Released</strong>February 2026</p>
+        <p><strong>For</strong>Exeter Chinese Student Fellowship</p>
+      </div>
+      <a class="info-github-link" href="https://github.com/brianskcheng/ecsf-certificate-generator" target="_blank" rel="noopener">
+        <svg width="18" height="18" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z"/></svg>
+        View on GitHub
+      </a>
+      <div class="modal-actions">
+        <button type="button" class="modal-btn modal-btn-cancel" id="infoClose">Close</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Export confirmation modal -->
+  <div class="modal-overlay hidden" id="exportModal">
+    <div class="modal">
+      <h3 class="modal-title">Missing Required Fields</h3>
+      <p class="modal-text">The following fields are empty:</p>
+      <ul class="modal-list" id="modalMissingList"></ul>
+      <p class="modal-text">Export anyway?</p>
+      <div class="modal-actions">
+        <button type="button" class="modal-btn modal-btn-cancel" id="modalCancel">Cancel</button>
+        <button type="button" class="modal-btn modal-btn-confirm" id="modalConfirm">Export</button>
+      </div>
+    </div>
+  </div>
 
   <script src="logo-data.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
