--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Lora:ital,wght@0,400;0,700;1,400;1,600&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <script>var _cb = Date.now();</script>
-  <link rel="stylesheet" id="mainCSS" href="styles.css">
-  <script>document.getElementById('mainCSS').href = 'styles.css?' + _cb;</script>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    .app-loader{position:fixed;inset:0;z-index:9999;background:var(--cream,#F5F0E8);display:flex;align-items:center;justify-content:center;flex-direction:column;transition:opacity .4s ease}
+    .app-loader.fade-out{opacity:0;pointer-events:none}
+    .app-main,.mobile-menu-btn{visibility:hidden}
+    .app-loaded .app-main,.app-loaded .mobile-menu-btn{visibility:visible}
+    .loader-spinner{width:36px;height:36px;border:3px solid #E8E0D0;border-top-color:#2D4A2D;border-radius:50%;animation:spin .7s linear infinite}
+    .loader-text{margin-top:.75rem;font-family:'Montserrat',sans-serif;font-size:.8rem;color:#5A5A5A;letter-spacing:.04em}
+    @keyframes spin{to{transform:rotate(360deg)}}
+  </style>
 </head>
 <body>
+
+  <!-- Loading overlay -->
+  <div class="app-loader" id="appLoader">
+    <div class="loader-spinner"></div>
+    <p class="loader-text">Loading</p>
+  </div>
 
   <!-- Mobile menu button -->
   <button class="mobile-menu-btn" id="mobileMenuBtn" title="Edit certificate">
@@ -28,6 +41,12 @@
   <main class="app-main">
     <!-- Left Sidebar -->
     <aside class="sidebar" id="sidebar">
+      <button class="sidebar-close-btn" id="sidebarCloseBtn" title="Close menu">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
+          <line x1="6" y1="6" x2="18" y2="18"/>
+          <line x1="18" y1="6" x2="6" y2="18"/>
+        </svg>
+      </button>
       <div class="sidebar-header">
         <img alt="ECSF Logo" class="header-logo" id="headerLogo">
         <h1>ECSF Certificate Generator</h1>
@@ -211,13 +230,30 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.3/jspdf.umd.min.js"></script>
   <script>
     (function() {
-      var v = _cb;
       var files = ['logo-data.js', 'app.js'];
       var i = 0;
+      var scriptsReady = false;
+
+      function dismissLoader() {
+        if (!scriptsReady) return;
+        var fontsPromise = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
+        fontsPromise.then(function() {
+          document.body.classList.add('app-loaded');
+          var loader = document.getElementById('appLoader');
+          if (!loader) return;
+          loader.classList.add('fade-out');
+          setTimeout(function() { loader.remove(); }, 450);
+        });
+      }
+
       (function next() {
-        if (i >= files.length) return;
+        if (i >= files.length) {
+          scriptsReady = true;
+          dismissLoader();
+          return;
+        }
         var s = document.createElement('script');
-        s.src = files[i++] + '?' + v;
+        s.src = files[i++];
         s.onload = next;
         document.body.appendChild(s);
       })();
