--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Left Sidebar -->
     <aside class="sidebar" id="sidebar">
       <button class="sidebar-close-btn" id="sidebarCloseBtn" title="Close menu">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
           <line x1="6" y1="6" x2="18" y2="18"/>
           <line x1="18" y1="6" x2="6" y2="18"/>
         </svg>
